Upgrade MAC to AP 5.10 (#65)
Upgrades MAC to use AP 5.10, which is required to properly support parsing memory statistics of AP 5.10 applications.